--- a/src/index.less
+++ b/src/index.less
@@ -19,184 +19,101 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.absolute {
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+}
+
 .foto-sendiri {
   position: absolute;
   right: 0;
-  top: 10%;
+  bottom: 0;
+  width: 75%;
+  z-index: -1;
+  opacity: 60%;
 
-  &::after {
+  &:after {
     content: "";
     position: absolute;
-    bottom: 0;
     left: 0;
+    bottom: 0;
+    z-index: 10;
+    height: 50%;
     width: 100%;
-    height: 65%;
     background: linear-gradient(to bottom, transparent, @primary-color);
   }
 }
 
-.heading {
+header {
   height: 100vh;
-  display: flex;
   align-items: center;
-  padding: 48px;
+  display: flex;
+  padding: 18px;
 
   h1 {
-    font-size: 96px;
-    letter-spacing: 4px;
+    font-size: 36px;
 
     .passion {
-      color: transparent;
-      background: linear-gradient(
-        130deg,
-        @accent-color,
-        darken(@accent-color, 35%)
-      );
-      -webkit-background-clip: text;
-      -moz-background-clip: text;
-      background-clip: text;
+      color: @accent-color;
     }
   }
 }
 
 .about-section {
-  height: 100vh;
+  height: 50vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-inline: 48px;
+  padding-inline: 18px;
 
   h2 {
-    font-size: 80px;
-    margin-bottom: 32px;
-    letter-spacing: 2px;
+    font-size: 32px;
+    margin-bottom: 24px;
   }
 
   p {
-    width: 60%;
-    font-size: 20px;
-    line-height: 1.75;
+    line-height: 1.475;
   }
 }
 
 .skills-section {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  padding: 1rem 18px;
+  overflow-x: hidden;
 
-  h2 {
-    font-size: 80px;
-    letter-spacing: 2px;
+  & > h2 {
+    font-size: 32px;
     margin-bottom: 24px;
     text-align: center;
   }
 
-  p {
-    width: 60%;
-    font-size: 16px;
-    line-height: 1.75;
+  & > p {
+    line-height: 1.475;
     text-align: center;
-    margin-bottom: 32px;
+    margin-bottom: 36px;
   }
 
-  .skills {
+  .skill-container {
+    width: 97%;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 16px;
-    justify-content: center;
-    width: 75%;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 8px;
 
-    .skill-card {
-      background: linear-gradient(
-        to bottom,
-        fade(@secondary-color, 50%),
-        fade(@secondary-color, 30%)
-      );
-      border-radius: 24px;
+    .skill {
+      background: linear-gradient(45deg, fade(@secondary-color, 45%), fade(@text-color, 15%));
       width: 100%;
+      border-radius: 12px;
+      padding: 1rem 0.5rem;
       display: flex;
-      align-items: center;
+      gap: 1.725rem;
       flex-direction: column;
-      padding: 24px;
-      gap: 24px;
-
-      h5 {
-        text-align: center;
-        font-size: 24px;
-      }
-
-      .star-rating {
-        display: flex;
-        gap: 8px;
-      }
-    }
-  }
-}
-
-.contact-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 100vh;
-
-  h2 {
-    font-size: 80px;
-    letter-spacing: 2px;
-    margin-bottom: 24px;
-    text-align: center;
-  }
-
-  p:nth-child(1) {
-    width: 60%;
-    font-size: 16px;
-    line-height: 1.75;
-    text-align: center;
-  }
-
-  p:nth-child(2) {
-    width: 60%;
-    font-size: 16px;
-    line-height: 1.75;
-    text-align: center;
-  }
-
-  .contact-form {
-    width: 55%;
-    margin-top: 32px;
-    display: flex;
-    flex-direction: column;
-
-    .text-input {
-      padding: 8px 16px;
-      background: transparent;
-      border: solid 1px @secondary-color;
-      width: 100%;
-      border-radius: 4px;
-      margin-bottom: 8px;
-    }
-
-    .textarea-input {
-      width: 100%;
-      border-radius: 4px;
-      padding: 8px 16px;
-      resize: horizontal;
-      border: solid 1px @secondary-color;
-      background: transparent;
-      font-family: inherit;
-      height: 8rem;
-      margin-bottom: 24px;
-    }
-
-    button[type="submit"] {
-      background-color: @secondary-color;
-      border: none;
-      width: 100%;
-      display: block;
-      padding: 8px;
-      border-radius: 4px;
-      color: @text-color;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
